work on order history and view order page

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-VITE_BACKEND_BASE_URL=https://duuitt.hashsoftware.com/
+VITE_BACKEND_BASE_URL= https://duuitt.hashsoftware.com/
+
+# VITE_IMAGE_BASE_URL = https://duuitt.hashsoftware.com/
