--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
     "axios": "^1.10.0",
+    "firebase": "^12.0.0",
     "js-cookie": "^3.0.5",
     "react": "^19.1.0",
     "react-data-table-component": "^7.7.0",
