add places autocomplete in restaurant profile update

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 VITE_BACKEND_BASE_URL= https://duuitt.hashsoftware.com/
 
 # VITE_IMAGE_BASE_URL = https://duuitt.hashsoftware.com/
+
+VITE_GOOGLE_MAPS_API_KEY=AIzaSyAGYLXByGkajbYglfVPK4k7VJFOFsyS9EA
