--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.2.0",
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
+    "@react-google-maps/api": "^2.20.7",
     "axios": "^1.10.0",
     "firebase": "^12.0.0",
     "js-cookie": "^3.0.5",
@@ -21,8 +22,8 @@
     "react-data-table-component": "^7.7.0",
     "react-dom": "^19.1.0",
     "react-modal": "^3.16.3",
+    "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^7.7.0",
-    "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.10",
@@ -35,8 +36,6 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/react-modal": "^3.16.3",
-    "@types/react-slick": "^0.23.13",
-    "@types/swiper": "^5.4.3",
     "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.30.1",
