--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "axios": "^1.10.0",
     "firebase": "^12.0.0",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.2",
+    "jspdf-autotable": "^5.0.2",
     "react": "^19.1.0",
     "react-data-table-component": "^7.7.0",
     "react-dom": "^19.1.0",
