--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "js-cookie": "^3.0.5",
     "jspdf": "^3.0.2",
     "jspdf-autotable": "^5.0.2",
+    "lucide-react": "^0.542.0",
     "react": "^19.1.0",
     "react-data-table-component": "^7.7.0",
     "react-dom": "^19.1.0",
